2004-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/steps.py:
	  Another soundcard fix - this never worked.
	  Bring names of GStreamer properties and step options in line.

2004-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/steps.py:
	  throw an error when list_tracks doesn't work (interface issues ?)

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/job.py:
	  woah, scary how syntax errors going unnoticed can screw up
	  the whole flumotion system.  This fixes soundcards for me.

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/job.py:
	  add another error raise

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/soundcard/soundcard.xml:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/steps.py:
	  channels should be serialized as int until there is a good
	  representation of them, because setting channels=stereo in
	  GStreamer doesn't work

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  fix some prints and raises

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  attempt to make runCode more robust.  Needs more work.

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_soundcard.glade:
	  fix typo
	* flumotion/wizard/enums.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:
	  block updates when asked.  fixes #98

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/wizard.py:
	  change quit to apply, fixes #71

2004-11-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_webcam.glade:
	* flumotion/wizard/steps.py:
	  Show name of webcam in the UI
